--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,9 +9,18 @@
         <param-name>primefaces.THEME</param-name>
         <param-value>bluesky</param-value>
     </context-param>
-    
-    
-   
+    <!--
+    <filter>
+        <filter-name>loginFilter</filter-name>
+        <filter-class>edu.mum.comproonline.control.PageAccessControlBean</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>loginFilter</filter-name>
+        <url-pattern>/faces/pages/Admin/*</url-pattern>
+        <url-pattern>/faces/pages/applicant/*</url-pattern>
+        <url-pattern>/faces/pages/admissionStaff/*</url-pattern>
+    </filter-mapping>    
+   -->
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
